# projectmake

./: CMakeLists.txt  Makefile  funcA.cpp  funcA.h  main.cpp
foo/: foo.cpp  foo.h
test/: CMakeLists.txt  Makefile  test.cpp
